<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="add_friend">Add People</string>
	<string name="add_contact">Add a contact</string>
	<string name="add_event">Create event</string>
	<string name="app_name">Application Name</string>
	<string name="cancel">Cancel</string>	
	<string name="connection">Connection</string>
	<string name="connection_automatic">Connection automatic</string>
	<string name="connection_informations">Connection informations</string>
	<string name="contacts">Contacts</string>
	<string name="create_event">Create event</string>	
	<string name="date">Date</string>
	<string name="description">Description</string>
	<string name="email">Email</string>
	<string name="enter_email">Enter a friend email</string>
	<string name="event">Event</string>
	<string name="first_name">First name</string>
	<string name="gifts">Gifts</string>
	<string name="identification">Identification</string>
	<string name="invite">Invite</string>
	<string name="my_events">My events</string>
	<string name="my_options">My options</string>
	<string name="name">Name</string>
	<string name="next">Next</string>
	<string name="new_password">New password</string>
	<string name="not_yet_registered">Not yet registered ?</string>
	<string name="no_event_available">No event available</string>
	<string name="participants">attendees</string>
	<string name="password">Password</string>
	<string name="personal_informations">Personal informations</string>
	<string name="profil">Profil</string>
	<string name="recipient">Recipient</string>
	<string name="registration">Registration</string>
	<string name="repeat_password">Repeat password</string>
	<string name="sign_up">Sign up</string>
	<string name="waiting_events">Waiting events</string>
	<string name="submit">Save</string>
	<string name="vote">Vote</string>
	<string name="vote_moins">Don\'t vote for</string>
	<string name="vote_plus">Vote for</string>
	<string name="your_email">Your email</string>
	<string name="progress_load_friends">Loading friends from server</string>
	<string name="server_connexion">Connecting to the server</string>
	<string name="error_server">An error has occured... Please retry</string>
	<string name="connexion_nok">Invalid credentials</string>
</resources>
