<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20sp"
  android:background="#FFFFFF">
  <TextView android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center"
  	android:text="@string/registration"
  	android:textSize="24sp"
  	android:layout_marginBottom="30sp"
  	android:textColor="@color/main_green"
  	android:textStyle="bold"/>
  <TextView android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp"
  	android:layout_marginBottom="10sp"
  	android:text="@string/connection_informations"
  	android:textSize="18sp"
  	android:textColor="#000"/>
  <EditText android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp"
  	android:layout_marginRight="20sp"
  	android:layout_marginBottom="5sp"
  	android:singleLine="true"
  	android:hint="@string/your_email"/>
  <EditText android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp"
  	android:layout_marginRight="20sp"
  	android:layout_marginBottom="5sp"
  	android:password="true"
  	android:singleLine="true"
  	android:hint="@string/password"/>
  <EditText android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp"
  	android:layout_marginRight="20sp"
  	android:layout_marginBottom="5sp"
  	android:password="true"
  	android:singleLine="true"
  	android:hint="@string/repeat_password"/>
  <TextView android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/personal_informations"
  	android:textSize="18sp"
  	android:layout_marginBottom="10sp"
  	android:layout_marginLeft="20sp"
  	android:textColor="#000"/>
  <EditText android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp"
  	android:layout_marginRight="20sp"
  	android:layout_marginBottom="5sp"
  	android:singleLine="true"
  	android:hint="@string/name"/>
  <EditText android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp"
  	android:layout_marginRight="20sp"
  	android:layout_marginBottom="5sp"
  	android:password="true"
  	android:singleLine="true"
  	android:hint="@string/first_name"/>
  <Button android:id="@+id/sign_up_button"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center"
  	android:paddingLeft="30sp"
  	android:paddingRight="30sp"
  	android:text="@string/sign_up"
  	android:textSize="18sp"
  	android:textStyle="bold"
  	android:textColor="@color/main_green"/>
    
</LinearLayout>
