<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="#FFFFFF">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="match_parent" android:orientation="vertical">


		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:text="@string/participants" android:textSize="24sp"
			android:layout_marginTop="20sp" android:layout_marginBottom="20sp"
			android:textColor="@color/main_green" android:textStyle="bold" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:layout_marginBottom="5sp" android:text="@string/email"
			android:textSize="18sp" android:textColor="#000" />

		<RelativeLayout android:layout_width="match_parent"
			android:layout_height="match_parent">

			<EditText android:layout_width="220sp"
				android:layout_height="wrap_content" android:layout_marginBottom="10sp"
				android:singleLine="true" android:layout_marginLeft="30sp"
				android:id="@+id/EditText_email_participant"
				android:layout_marginRight="5sp" android:hint="@string/enter_email" />

			<Button android:layout_width="wrap_content"
				android:layout_height="32dip" android:id="@+id/button_invite"
				android:text="@string/invite" android:layout_margin="5dip"
				android:textSize="10sp" android:textStyle="bold" android:textColor="@color/main_green"
				android:layout_toRightOf="@+id/EditText_email_participant">
			</Button>
		</RelativeLayout>
		
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/button_add_contact"
			android:text="@string/add_contact" android:layout_gravity="center"
			android:layout_margin="10dip" android:textSize="10sp"
			android:textStyle="bold" android:textColor="@color/main_green">
		</Button>

		<ListView android:id="@+id/participants_listView"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/button_create_event"
			android:text="@string/create_event" android:layout_gravity="center"
			android:layout_margin="10dip" android:textSize="10sp"
			android:textStyle="bold" android:textColor="@color/main_green">
		</Button>
	</LinearLayout>
</ScrollView>
