<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20sp"
  android:background="#FFFFFF">
  <TextView android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center"
  	android:text="@string/connection"
  	android:textSize="24sp"
  	android:layout_marginBottom="30sp"
  	android:textColor="@color/main_green"
  	android:textStyle="bold"/>
  <TextView android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp"
  	android:layout_marginBottom="10sp"
  	android:text="@string/identification"
  	android:textSize="18sp"
  	android:textColor="#000"/>
  <EditText
  	android:id="@+id/connexion_email"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp"
  	android:layout_marginRight="20sp"
  	android:layout_marginBottom="5sp"
  	android:singleLine="true"
  	android:hint="@string/email"/>
  <EditText 
  	android:id="@+id/connexion_pwd"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp"
  	android:layout_marginRight="20sp"
  	android:layout_marginBottom="5sp"
  	android:password="true"
  	android:singleLine="true"
  	android:hint="password"/>
  <LinearLayout android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="20sp">
  	<CheckBox android:id="@+id/connectionAuto"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"/>
  	<TextView android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/connection_automatic"
  		android:textSize="18sp"
  		android:textColor="#000"/>
  </LinearLayout>
  <Button android:id="@+id/connection_button"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_marginTop="5sp"
  	android:layout_gravity="center"
  	android:paddingLeft="30sp"
  	android:paddingRight="30sp"
  	android:layout_marginBottom="25sp"
  	android:text="@string/connection"
  	android:textSize="18sp"
  	android:textStyle="bold"
  	android:textColor="@color/main_green"/>
  <TextView android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/not_yet_registered"
  	android:textSize="18sp"
  	android:layout_marginBottom="10sp"
  	android:layout_marginLeft="20sp"
  	android:textColor="#000"/>
  <Button android:id="@+id/registration_button"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center"
  	android:paddingLeft="30sp"
  	android:paddingRight="30sp"
  	android:text="@string/sign_up"
  	android:textSize="18sp"
  	android:textStyle="bold"
  	android:textColor="@color/main_green"/>
    
</LinearLayout>
