<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#FFFFFF">

	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent" android:layout_height="match_parent" android:padding="20sp">


		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:text="@string/profil" android:textSize="24sp" 
			android:layout_marginBottom="30sp" android:textColor="@color/main_green"
			android:textStyle="bold" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginBottom="10sp"
			android:id="@+id/textView_name" android:textSize="18sp"
			android:layout_gravity="center" android:textColor="#000" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginBottom="30sp"
			android:id="@+id/textView_birth" android:textSize="18sp"
			android:layout_gravity="center" android:textColor="#000" />

		<EditText android:layout_width="match_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20sp"
			android:layout_marginRight="20sp" android:layout_marginBottom="10sp"
			android:password="true" android:singleLine="true" android:hint="@string/password"
			android:id="@+id/editText_password" />

		<EditText android:layout_width="match_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20sp"
			android:layout_marginRight="20sp" android:layout_marginBottom="10sp"
			android:password="true" android:singleLine="true" android:hint="@string/repeat_password"
			android:id="@+id/editText_confirmpassword" />

		<EditText android:layout_width="match_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20sp"
			android:layout_marginRight="20sp" android:layout_marginBottom="10sp"
			android:singleLine="true" android:id="@+id/editText_email" />

		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/button_submit"
			android:text="@string/submit" android:layout_gravity="center"
			android:layout_margin="10dip" android:textSize="18sp"
			android:textStyle="bold" android:textColor="@color/main_green">
		</Button>


	</LinearLayout>
</ScrollView>
